fix: page before z-index

--- a/public/css/tours.css
+++ b/public/css/tours.css
@@ -36,6 +36,7 @@ body {
     transparent 79px
   );
   pointer-events: none;
+  z-index: 0;
 }
 
 header,
